# .github

./: README.md  dependencies.md  internal-dependencies.md
dev/: README.md  init.sh  install.py  install.sh  pull.sh  version_bumper.py
pkg/: pyproject.toml
pkg/src/repodynamics/: __init__.py  logo_maker.py  manager.py  version_bumper.py
profile/: README.md
